оптимизация usecase слоя, аудит сервисной логики, исправление ошибок, документация новых паттернов написания кода